--- a/css/common.css
+++ b/css/common.css
@@ -23,6 +23,7 @@ h2{
       color:#000;
       font-size: 2.5rem;
       font-family: 'Quicksand', sans-serif;
+      margin-bottom: 50px;
 }
 ul, ol, li{
       list-style-type:none;
