--- a/css/style.css
+++ b/css/style.css
@@ -170,19 +170,113 @@
     float: left;
     width: calc((100% - 25px)/6);
     height: 225px;
-    overflow: hidden;
+    /*overflow: hidden;*/
     margin-right: 5px;
+    position: relative;
+    color: #fff;
+    text-align: center;
 }
 #sec6 ul>li.youtube{
-    width: calc((100% - 25px)/6*2 + 25px);
+    width: calc((100% - 25px)/6*2 + 5px);
+    margin-right: 0;
+}
+#sec6 ul>li.youtube .ytb_btn{
+    position: absolute;
+    top: calc(50% - 35px);
+    left: calc(50% - 35px);
+    width: 70px;
+    filter: invert(99%) sepia(100%) saturate(0%) hue-rotate(284deg) brightness(102%) contrast(104%);
+}
+#sec6 ul>li.youtube .ytb_btn img{
+    width: 100%;
 }
 #sec6 ul>li:hover{
     border: 2px solid #DA4C7A;
+    box-sizing: border-box;
 }
 #sec6 li img{
     width: 100%;
 }
-/*
-#sec6 p{
-    display: none;
-}*/
+#sec6 .caption{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+}
+#sec6 .c_tit1{
+    position: absolute;
+    top: 70px;
+    left: calc(50% - 109px);
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+#sec6 .c_tit2{
+    position: absolute;
+    top: 70px;
+    left: calc(50% - 75px);
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+#sec6 .c_tit3{
+    position: absolute;
+    top: 70px;
+    left: calc(50% - 77px);
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+#sec6 .c_tit4{
+    position: absolute;
+    top: 70px;
+    left: calc(50% - 97px);
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+#sec6 .c_txt1{
+    position: absolute;
+    top : 120px;
+    left: calc(50% - 128px);
+    font-size: 0.9rem;
+    line-height: 1.3em;
+}
+#sec6 .c_txt2{
+    position: absolute;
+    top : 120px;
+    left: calc(50% - 105px);
+    font-size: 0.9rem;
+    line-height: 1.3em;
+}
+#sec6 .c_txt3{
+    position: absolute;
+    top : 120px;
+    left: calc(50% - 136px);
+    font-size: 0.9rem;
+    line-height: 1.3em;
+}
+#sec6 .c_txt4{
+    position: absolute;
+    top : 120px;
+    left:calc(50% - 116px);
+    font-size: 0.9rem;
+    line-height: 1.3em;
+}
+#sec6 .c_insta{
+    position: absolute;
+    bottom: 5px;
+    left: 10px;
+    width: 20px;
+}
+#sec6 .c_insta img{
+    width: 100%;
+}
+
+#sec6 span.bar1{
+    position: absolute;
+    top: 100px;
+    left: 0;
+    display: block;
+    width: 100px;
+    height: 5px;
+    color: #fff;
+}
