--- a/css/style.css
+++ b/css/style.css
@@ -134,10 +134,54 @@
 }
 
 /*********************sec1****************************/
+#sec1{
+    margin-bottom: 146px;
+    padding-top: 30px;
+    background-color: #8e8e8e;
+    width: 100%;
+    height: 700px;
+}
+#sec1 h2{
+    color: #fff;
+}
+
 /*********************sec2****************************/
+#sec2{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+#sec2::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+#sec2 h2{
+    text-align: center;
+}
+#sec2 .life_l{
+    float: left;
+    width: 420px;
+}
+#sec2 .life_l img{
+    width: 100%;
+}
 /*********************sec3****************************/
+#sec3{
+    margin-top: 200px;
+    margin-bottom: 146px;
+    padding-top: 30px;
+    background-color: #8e8e8e;
+    width: 100%;
+    height: 700px;
+}
+#sec3 h2{
+    transform: translate(0,-200px);
+}
 /*********************sec4****************************/
 /*********************sec5****************************/
+#sec5{
+    margin-bottom: 100px;
+}
 #sec5 h2{
     color: #000;
     font-weight: bold;
@@ -161,6 +205,9 @@
     width: 100%;
 }
 /*********************sec6****************************/
+#sec6{
+    margin-bottom: 100px;
+}
 #sec6 .inner::after{
     content: '';
     display: block;
@@ -170,7 +217,7 @@
     float: left;
     width: calc((100% - 25px)/6);
     height: 225px;
-    /*overflow: hidden;*/
+    overflow: hidden;
     margin-right: 5px;
     position: relative;
     color: #fff;
@@ -204,67 +251,48 @@
     background-color: rgb(0,0,0,0.5);
     width: 100%;
     height: 100%;
+    padding-top: 60px;
+    opacity: 0;
+}
+#sec6 .caption:hover{
+    opacity: 1;
 }
 #sec6 .c_tit1{
-    position: absolute;
-    top: 70px;
-    left: calc(50% - 109px);
     font-weight: bold;
     font-size: 1.3rem;
 }
 #sec6 .c_tit2{
-    position: absolute;
-    top: 70px;
-    left: calc(50% - 75px);
     font-weight: bold;
     font-size: 1.3rem;
 }
 #sec6 .c_tit3{
-    position: absolute;
-    top: 70px;
-    left: calc(50% - 77px);
     font-weight: bold;
     font-size: 1.3rem;
 }
 #sec6 .c_tit4{
-    position: absolute;
-    top: 70px;
-    left: calc(50% - 97px);
     font-weight: bold;
     font-size: 1.3rem;
 }
 #sec6 .c_txt1{
-    position: absolute;
-    top : 120px;
-    left: calc(50% - 128px);
     font-size: 0.9rem;
     line-height: 1.3em;
 }
 #sec6 .c_txt2{
-    position: absolute;
-    top : 120px;
-    left: calc(50% - 105px);
     font-size: 0.9rem;
     line-height: 1.3em;
 }
 #sec6 .c_txt3{
-    position: absolute;
-    top : 120px;
-    left: calc(50% - 136px);
     font-size: 0.9rem;
     line-height: 1.3em;
 }
 #sec6 .c_txt4{
-    position: absolute;
-    top : 120px;
-    left:calc(50% - 116px);
     font-size: 0.9rem;
     line-height: 1.3em;
 }
 #sec6 .c_insta{
     position: absolute;
-    bottom: 5px;
-    left: 10px;
+    bottom: 65px;
+    left: 5px;
     width: 20px;
 }
 #sec6 .c_insta img{
@@ -272,11 +300,38 @@
 }
 
 #sec6 span.bar1{
-    position: absolute;
-    top: 100px;
-    left: 0;
     display: block;
-    width: 100px;
-    height: 5px;
-    color: #fff;
+    width: 220px;
+    height: 2px;
+    background-color: #fff;
+    margin-left: 35px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#sec6 span.bar2{
+    display: block;
+    width: 150px;
+    height: 2px;
+    background-color: #fff;
+    margin-left: 70px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#sec6 span.bar3{
+    display: block;
+    width: 155px;
+    height: 2px;
+    background-color: #fff;
+    margin-left: 68px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#sec6 span.bar4{
+    display: block;
+    width: 190px;
+    height: 2px;
+    background-color: #fff;
+    margin-left: 50px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
