--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /****************공지*********************/
-#key_popup{
+/*#key_popup{
     position: fixed;
     width: 100%;
     height: 100%;
     display: block;    
     z-index: 99999999999999999999999999;
-    background-color: rgb(0,0,0,0.5);/*배경색 투명하게 깔기*/
+    background-color: rgb(0,0,0,0.5);/*배경색 투명하게 깔기*
 }
 #key_popup > div{
     position: absolute;
@@ -23,6 +23,53 @@
     position: absolute;
     top: -20px;
     right: -30px;
+    width: 20px;
+    height: 20px;
+    background: url(../images/btn_popclose.gif) no-repeat;
+    background-position: right top;
+    filter: invert(12%) sepia(73%) saturate(1121%) hue-rotate(186deg) brightness(101%) contrast(93%);
+    border: none;
+    cursor: pointer;
+}*/
+#key_popup{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: block;    
+    z-index: 99999999999999999999999999;
+    background-color: rgb(0,0,0,0.5);/*배경색 투명하게 깔기*/
+}
+#key_popup > div{
+    position: absolute;
+    left: calc(50% - 301px);
+    top: 170px; 
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1.5em;
+    text-align: center;
+    color: #fff;
+}
+#key_popup p{
+    position: absolute;
+    top: calc(50% - 180px);
+    left: calc(50% - 227px);
+}
+#key_popup p>span{
+    font-weight: 800;
+    color: #132F53;
+}
+#key_popup p>span.big{
+    font-size: 1.7rem;
+    color: #fff;
+    font-weight: 700;
+}
+#key_popup img{
+    width: 100%;
+}
+#key_popup .close{
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
     width: 20px;
     height: 20px;
     background: url(../images/btn_popclose.gif) no-repeat;
