--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,83 @@
+/****************공지*********************/
+/*#key_popup{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: block;    
+    z-index: 99999999999999999999999999;
+    background-color: rgb(0,0,0,0.5);/*배경색 투명하게 깔기*
+}
+#key_popup > div{
+    position: absolute;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 2em;
+    text-align: center;
+    border: 3px solid #132F53;
+    padding: 80px 30px;
+    left: calc(50% - 469px);
+    top: 200px;
+    background-color: #fff;
+}
+#key_popup .close{
+    position: absolute;
+    top: -20px;
+    right: -30px;
+    width: 20px;
+    height: 20px;
+    background: url(../images/btn_popclose.gif) no-repeat;
+    background-position: right top;
+    filter: invert(12%) sepia(73%) saturate(1121%) hue-rotate(186deg) brightness(101%) contrast(93%);
+    border: none;
+    cursor: pointer;
+}*/
+#key_popup{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: block;    
+    z-index: 99999999999999999999999999;
+    background-color: rgb(0,0,0,0.5);/*배경색 투명하게 깔기*/
+}
+#key_popup > div{
+    position: absolute;
+    left: calc(50% - 301px);
+    top: 170px; 
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1.5em;
+    text-align: center;
+    color: #fff;
+}
+#key_popup p{
+    position: absolute;
+    top: calc(50% - 180px);
+    left: calc(50% - 227px);
+}
+#key_popup p>span{
+    font-weight: 800;
+    color: #132F53;
+}
+#key_popup p>span.big{
+    font-size: 1.7rem;
+    color: #fff;
+    font-weight: 700;
+}
+#key_popup img{
+    width: 100%;
+}
+#key_popup .close{
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    width: 20px;
+    height: 20px;
+    background: url(../images/btn_popclose.gif) no-repeat;
+    background-position: right top;
+    filter: invert(12%) sepia(73%) saturate(1121%) hue-rotate(186deg) brightness(101%) contrast(93%);
+    border: none;
+    cursor: pointer;
+}
 /************************popup********************************/
 #top_popup{
     position: relative;
@@ -144,7 +224,7 @@
     padding-top: 30px;
     background-color: #8e8e8e;
     width: 100%;
-    height: 700px;
+    height: 500px;
 }
 #sec1 h2{
     color: #fff;
@@ -152,7 +232,7 @@
 
 /*********************sec2****************************/
 #sec2{
-    margin-top: 100px;
+    margin-top: 300px;
 }
 #sec2::after{
     content: '';
@@ -161,25 +241,27 @@
 }
 #sec2 h2{
     text-align: center;
+    padding-top: 110px;
 }
 #sec2 .life_l{
     float: left;
     width: 420px;
+    padding: 0 100px;
 }
 #sec2 .life_l img{
     width: 100%;
 }
 /*********************sec3****************************/
 #sec3{
-    margin-top: 300px;
-    margin-bottom: 146px;
+    margin-top: 500px;
+    margin-bottom: 100px;
     padding-top: 30px;
     background-color: #8e8e8e;
     width: 100%;
-    height: 700px;
+    height: 500px;
 }
 #sec3 h2{
-    transform: translate(0,-225px);
+    transform: translate(0,-425px);
 }
 /*********************sec4****************************/
 /*********************sec5****************************/
